<resources>
    <string name="app_name">Zero Praga Solutions</string>
    <string name="title_activity_home">Zero Praga</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Zero Praga</string>
    <string name="nav_header_subtitle">zeropraga2019@gmail.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Sair</string>

    <string name="menu_home">Íncio</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="navigation_drawer_abrir">Abrir</string>

    <string name="menu_descricao">Cadastro</string>
    <string name="menu_praga">Praga</string>
    <string name="menu_estagio">Estagio</string>
    <string name="menu_turma">Turma</string>
    <string name="menu_tipo_coleta">Tipo Coleta</string>
    <string name="menu_consultaboletim">Tipo Coleta</string>
    <string name="menu_sair">Sair</string>
    <string name="title_activity_praga">Cadastro de Praga</string>
    <string name="title_activity_praga_new">Nova Praga</string>
    <string name="SalvarSucesso">Salvado com Sucesso !</string>
    <string name="UsuarioErro">Login ou Senha Invalido !</string>
    <string name="title_activity_estagio">Estagio</string>
    <string name="title_activity_estagio_new">Novo Estagio</string>
    <string name="title_activity_turma">Turma</string>
    <string name="title_activity_turma_new">Nova Turma</string>
    <string name="title_activity_tipo_coleta">Tipo de Coleta</string>
    <string name="title_activity_tipo_coleta_new">Novo Tipo de Coleta</string>
    <string name="SalvarErro">Erro ao Salvar !</string>
    <string name="title_activity_usuario">Usuários</string>
    <string name="title_activity_usuario_new">Novo Usuário</string>
    <string name="LoginErro">Login ou Senha Invalido !</string>
    <string name="menu_usuario">Usuário</string>
    <string name="ContaInativa">Conta esta Inativada !</string>
    <string name="title_activity_boletim_new">Novo Boletim</string>
    <string name="LatitudeInvalida">Latitude Invalida.</string>
    <string name="LongitudeInvalida">Longitude Invalida !</string>
    <string name="AltitudeInvalida">Altitude Invalida.</string>
    <string name="NaoPermitido">Ops! Não tem Permissão.</string>

</resources>
